--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -174,13 +174,14 @@ a {
 
 /* --------------------------------------- footer ----------------------------------------*/
 footer{
-  padding-top: 2rem !important;
-  padding-bottom: 2rem !important;
+  padding-top: 5rem !important;
   background-color: #626262;
-  text-align: center !important;
+  text-align: !important;
   --bs-text-opacity: 1;
   color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
   width:100%;
+  height: 250px;
+  vertical-align: middle;
   
 }
 /*
